[package]
description = "Interact with the github.com/containers/image library via skopeo"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "containers-image-proxy"
readme = "README.md"
repository = "https://github.com/containers/containers-image-proxy-rs"
version = "0.5.3"
rust-version = "1.58.0"

[dependencies]
anyhow = "1.0"
capctl = "0.2.0"
fn-error-context = "0.2.0"
futures-util = "0.3.13"
nix = "0.26"
oci-spec = "0.5.5"
once_cell = "1.9.0"
libc = "0.2"
serde = { features = ["derive"], version = "1.0.125" }
serde_json = "1.0.64"
semver = "1.0.4"
tokio = { features = ["fs", "io-util", "macros", "process", "rt", "sync"], version = "1" }
tracing = "0.1"
cap-tempfile = "1.0.1"
# We didn't use the rustix re-export, so we're compatible with 1.x and 2.x.
cap-std-ext = ">= 1.0, < 3.0"

[lib]
path = "src/imageproxy.rs"

[features]
# See https://github.com/containers/skopeo/blob/03da797e42374892bca8759668adb0b06d087876/cmd/skopeo/proxy.go#L95
proxy_v0_2_4 = []
