[package]
description = "Interact with the github.com/containers/image library via skopeo"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "containers-image-proxy"
readme = "README.md"
repository = "https://github.com/containers/containers-image-proxy-rs"
version = "0.5.6"
rust-version = "1.70.0"

[dependencies]
anyhow = "1.0"
fn-error-context = "0.2.0"
futures-util = "0.3.13"
oci-spec = "0.5.5"
once_cell = "1.9.0"
libc = "0.2"
rustix = { version = "0.38", features = ["process", "net"] }
serde = { features = ["derive"], version = "1.0.125" }
serde_json = "1.0.64"
semver = "1.0.4"
tokio = { features = ["fs", "io-util", "macros", "process", "rt", "sync"], version = "1" }
tracing = "0.1"
# We support both versions
cap-std-ext = ">= 2.0, <= 3.0"

[lib]
path = "src/imageproxy.rs"

[features]
# See https://github.com/containers/skopeo/blob/03da797e42374892bca8759668adb0b06d087876/cmd/skopeo/proxy.go#L95
proxy_v0_2_4 = []
